added override variable feature