@@ -24,6 +24,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 
+import org.apache.commons.lang3.StringUtils;
 import org.json.simple.JSONObject;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -34,15 +35,19 @@ class TerraformApplyThread implements Runnable {
 	
 	private static final Logger log = LoggerFactory.getLogger(TerraformApplyThread.class);
 	
-	private File file;
+	private File tfRootModulepath;
+	private File planstatusfileDir;	
+	private String variableOverrideFile; 
 
 	public TerraformApplyThread() {
 
 	}
 
-	public TerraformApplyThread(File file) {
+	public TerraformApplyThread(File tfRootModulepath, File planstatusfileDir, String variableOverridefile) {
 
-		this.file = file;
+		this.tfRootModulepath = tfRootModulepath;
+		this.planstatusfileDir = planstatusfileDir;
+		this.variableOverrideFile = variableOverridefile;
 	}
 
 	@SuppressWarnings("unchecked")
@@ -55,9 +60,18 @@ class TerraformApplyThread implements Runnable {
 
 		Process exec;
 		try {
-			exec = Runtime.getRuntime().exec(
-					new String[] { "/bin/sh", "-c", "printf 'yes' | sh " + applyScriptPath + " " + file.getPath() });
-			exec.waitFor();
+				
+			if(StringUtils.isEmpty(variableOverrideFile)) {
+				exec = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c",
+						"printf 'yes' | sh " + applyScriptPath + " " + tfRootModulepath.getPath() });
+				exec.waitFor();
+				
+			}else {
+				
+				exec = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c",
+						"printf 'yes' | sh " + applyScriptPath + " " + tfRootModulepath.getPath() + " " + variableOverrideFile });
+				exec.waitFor();
+			}
 
 			BufferedReader reader = new BufferedReader(new InputStreamReader(exec.getInputStream()));
 			String line = "";
@@ -86,7 +100,7 @@ class TerraformApplyThread implements Runnable {
 				log.info("terraform apply script error stream : "+line2);
 			}
 
-			String filePath = file.getPath() + "/applyStatus";
+			String filePath = planstatusfileDir.getPath() + "/applyStatus";
 			File statusFile = new File(filePath);
 			InputStream statusInputStream = new ByteArrayInputStream(
 					statusRootObj.toString().getBytes(StandardCharsets.UTF_8));
@@ -99,11 +113,11 @@ class TerraformApplyThread implements Runnable {
 	}
 
 	public File getFile() {
-		return file;
+		return tfRootModulepath;
 	}
 
 	public void setFile(File file) {
-		this.file = file;
+		this.tfRootModulepath = file;
 	}
 
 }
